# KhoshboueiLab

./: README.md  pyproject.toml  setup.py  trigger_camera_jpenalozaa.txt
flir/Examples/Python3/: Trigger_QuickSpin.py
nvuelab/utils/: camera.py  clocks.py  video.py
tests/: 01_gui.py  02_gui_v2  03_gui_v3  04_gui_v4.py  05_gui_v5.py  gui_nosaving.py  gui_v6.py  tc_save-mp4.py  test_cfunctions.py  test_pipeline.py
tests/OLD/: test_pipeline.py  trigger_camera.py
